[package]
name = "kaspa-monitor"
version = "0.0.2"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
csv = "1.2"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
humantime = "2.1"
statistical = "1.0"
kaspa-wrpc-client = "0.15.0"
kaspa-core = "0.15.0"
kaspa-addresses = "0.15.0"
chrono = "0.4"
colored = "2.0"